--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp-sass": "^2.0.4",
     "jshint": "^2.8.0",
     "path": "^0.12.7",
+    "gulp-shell": "^0.5.0",
     "gulp-rename": "^1.2.2"
   }
 }
