--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 
 [tox]
-envlist = django18, django19
+envlist = django18, django19, django110-32, django110-343, django110-344, django111
 
 [testenv]
 commands = python manage.py test
 setenv =
-    DJANGO_SETTINGS_MODULE=formfieldstash.tests.settings_test
+    DJANGO_SETTINGS_MODULE=djangocms_misc.tests.settings
     PYTHONPATH={toxinidir}
 
 [base]
@@ -15,6 +15,12 @@ deps =
     factory_boy
     mock
     selenium
+    django-sekizai
+    djangocms-link
+    djangocms-text-ckeditor
+    django-filer
+    django-hvad
+    django-modeltranslation
 
 [testenv:django18]
 deps =
@@ -24,4 +30,27 @@ deps =
 [testenv:django19]
 deps =
     django>=1.9, <1.10
+    {[base]deps}
+
+[testenv:django110-32]
+deps =
+    django>=1.10, <1.11
+    django-cms==3.2.0
+    {[base]deps}
+
+[testenv:django110-343]
+deps =
+    django>=1.10, <1.11
+    django-cms==3.4.3
+    {[base]deps}
+
+[testenv:django110-344]
+deps =
+    django>=1.10, <1.11
+    django-cms==3.4.4
+    {[base]deps}
+
+[testenv:django111]
+deps =
+    django>=1.11, <1.12
     {[base]deps}
