--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ install:
   - python setup.py -q install
 
 script:
-  - ./manage.py test --settings=admin_sort.tests.settings
+  - ./manage.py test
