--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 
 [tox]
-envlist = django18, django19, django110-32, django110-343, django110-344, django111
+envlist = django18, django19-32, django110-33, django110-343, django110-344, django111
 
 [testenv]
 commands = python manage.py test
@@ -25,17 +25,19 @@ deps =
 [testenv:django18]
 deps =
     django>=1.8, <1.9
+    django-cms==3.3.0
     {[base]deps}
 
-[testenv:django19]
+[testenv:django19-32]
 deps =
     django>=1.9, <1.10
+    django-cms==3.3.0
     {[base]deps}
 
-[testenv:django110-32]
+[testenv:django110-33]
 deps =
     django>=1.10, <1.11
-    django-cms==3.2.0
+    django-cms==3.3.0
     {[base]deps}
 
 [testenv:django110-343]
@@ -50,7 +52,14 @@ deps =
     django-cms==3.4.4
     {[base]deps}
 
+[testenv:django110-345]
+deps =
+    django>=1.10, <1.11
+    django-cms==3.4.5
+    {[base]deps}
+
 [testenv:django111]
 deps =
     django>=1.11, <1.12
+    django-cms==3.4.5
     {[base]deps}
