adapt travis (starting with django 1.8

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 
 [tox]
-envlist = django18, django19-32, django110-33, django110-343, django110-344, django111
+envlist = django18-32, django19-32, django110-33, django110-343, django110-344, django111
 
 [testenv]
 commands = python manage.py test
@@ -22,16 +22,16 @@ deps =
     django-hvad
     django-modeltranslation
 
-[testenv:django18]
+[testenv:django18-32]
 deps =
     django>=1.8, <1.9
-    django-cms==3.3.0
+    django-cms==3.2.0
     {[base]deps}
 
 [testenv:django19-32]
 deps =
     django>=1.9, <1.10
-    django-cms==3.3.0
+    django-cms==3.2.0
     {[base]deps}
 
 [testenv:django110-33]
