big commit: more tests, better toolbar ( #7 )

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 
 [tox]
-envlist = django18-32, django19-32, django110-33, django110-343, django110-344, django111
+envlist = django110-343, django110-344, django110-345, django111
+# those fail! no ContentRenderer for untranslated! django18-32, django19-32, django110-33,
+
 
 [testenv]
 commands = python manage.py test
