--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 
 [tox]
-envlist = django110-343, django110-344, django110-345, django111
+envlist = django110-342, django110-343, django110-344, django110-345, django111
 # those fail! no ContentRenderer for untranslated! django18-32, django19-32, django110-33,
 
 
@@ -17,6 +17,7 @@ deps =
     factory_boy
     mock
     selenium
+    django-appconf
     django-sekizai
     djangocms-link
     djangocms-text-ckeditor
@@ -40,6 +41,12 @@ deps =
 deps =
     django>=1.10, <1.11
     django-cms==3.3.0
+    {[base]deps}
+
+[testenv:django110-342]
+deps =
+    django>=1.10, <1.11
+    django-cms==3.4.2
     {[base]deps}
 
 [testenv:django110-343]
