--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 
 [tox]
-envlist = django110-342, django110-343, django110-344, django110-345, django111
-# those fail! no ContentRenderer for untranslated! django18-32, django19-32, django110-33,
+envlist = django110-342, django110-343, django110-344, django110-345
+# those fail! no ContentRenderer for untranslated! django18-32, django19-32, django110-33, django111 (filer)
 
 
 [testenv]
