adapting travis and tox.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,16 @@
 
+
+
+
+
+
+
+# use this! http://tox.readthedocs.io/en/latest/config.html#generating-environments-conditional-settings
+# django 2.0 envs will fail, as the cms is not yet there.
+
+
 [tox]
-envlist = django110-342, django110-343, django110-344, django110-345
+envlist = django111-342, django111-343, django111-344, django111-345, django20-345, django20-351, django20-352
 # those fail! no ContentRenderer for untranslated! django18-32, django19-32, django110-33, django111 (filer)
 
 
@@ -23,7 +33,7 @@ deps =
     djangocms-text-ckeditor
     django-filer
     django-hvad
-    django-modeltranslation
+    django-modeltranslation==0.12
 
 [testenv:django18-32]
 deps =
@@ -43,32 +53,47 @@ deps =
     django-cms==3.3.0
     {[base]deps}
 
-[testenv:django110-342]
+[testenv:django111-342]
 deps =
-    django>=1.10, <1.11
+    django>=1.11, <1.12
     django-cms==3.4.2
     {[base]deps}
 
-[testenv:django110-343]
+[testenv:django111-343]
 deps =
-    django>=1.10, <1.11
+    django>=1.11, <1.12
     django-cms==3.4.3
     {[base]deps}
 
-[testenv:django110-344]
+[testenv:django111-344]
 deps =
-    django>=1.10, <1.11
+    django>=1.11, <1.12
     django-cms==3.4.4
     {[base]deps}
 
-[testenv:django110-345]
-deps =
-    django>=1.10, <1.11
-    django-cms==3.4.5
-    {[base]deps}
-
-[testenv:django111]
+[testenv:django111-345]
 deps =
     django>=1.11, <1.12
     django-cms==3.4.5
+    {[base]deps}
+
+[testenv:django20-345]
+basepython = python3.6
+deps =
+    django>=2.0, <2.1
+    django-cms==3.4.5
+    {[base]deps}
+
+[testenv:django20-351]
+basepython = python3.6
+deps =
+    django>=2.0, <2.1
+    django-cms==3.5.1
+    {[base]deps}
+
+[testenv:django20-352]
+basepython = python3.6
+deps =
+    django>=2.0, <2.1
+    django-cms==3.5.2
     {[base]deps}
