--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ env:
   - DJANGO="django<1.11" DJANGO_CMS="django-cms==3.4.3"
   - DJANGO="django<1.11" DJANGO_CMS="django-cms==3.4.4"
   - DJANGO="django<1.11" DJANGO_CMS="django-cms==3.4.5"
+  - DJANGO="django<2.0" DJANGO_CMS="django-cms==3.5.2"
+  - DJANGO="django<2.1" DJANGO_CMS="django-cms==3.4.5"
+  - DJANGO="django<2.1" DJANGO_CMS="django-cms==3.5.2"
 
 install:
   - pip install -r test_requirements.txt
@@ -18,3 +21,13 @@ install:
 
 script:
   - ./manage.py test
+
+matrix:
+  allow_failures:
+    - env: DJANGO="django<2.1" DJANGO_CMS="django-cms==3.4.5"
+    - env: DJANGO="django<2.1" DJANGO_CMS="django-cms==3.5.2"
+  exclude:
+    - python: '2.7'
+      env: DJANGO="django<2.1" DJANGO_CMS="django-cms==3.4.5
+    - python: '2.7'
+      env: DJANGO="django<2.1" DJANGO_CMS="django-cms==3.5.2
