--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,8 @@ deps =
     djangocms-text-ckeditor
     django-filer
     django-hvad
-    django-modeltranslation==0.12
+    # 0.12.2 introduces something strange!
+    django-modeltranslation==0.12.1
 
 [testenv:django18-32]
 deps =
