--- a/tox.ini
+++ b/tox.ini
@@ -1,27 +1,33 @@
-
-
-
-
-
-
-
-# use this! http://tox.readthedocs.io/en/latest/config.html#generating-environments-conditional-settings
-# django 2.0 envs will fail, as the cms is not yet there.
-
+# geckodriver howto
+# https://askubuntu.com/questions/851401/where-to-find-geckodriver-needed-by-selenium-python-package/863211
+# first: check latest version here: https://github.com/mozilla/geckodriver/releases
+# wget https://github.com/mozilla/geckodriver/releases/download/v0.11.1/geckodriver-v0.11.1-linux64.tar.gz
+# tar -xvzf geckodriver-v0.11.1-linux64.tar.gz
+# rm geckodriver-v0.11.1-linux64.tar.gz
+# chmod +x geckodriver
+# cp geckodriver /usr/local/bin/
 
 [tox]
-envlist = django111-342, django111-343, django111-344, django111-345, django20-345, django20-351, django20-352
-# those fail! no ContentRenderer for untranslated! django18-32, django19-32, django110-33, django111 (filer)
-
+# no django 2.0 yet, as filer and cms dont support it.
+envlist = py{27,36}-django{111}-cms{342,343,344,345,346,352}
 
 [testenv]
 commands = python manage.py test
 setenv =
     DJANGO_SETTINGS_MODULE=djangocms_misc.tests.settings
     PYTHONPATH={toxinidir}
-
-[base]
 deps =
+    django18: Django>=1.8,<1.9
+    django19: Django>=1.9,<1.10
+    django100: Django>=1.10,<1.11
+    django111: Django>=1.11,<2.0
+    django20: Django>=2.0,<2.1
+    cms342: django-cms==3.4.2
+    cms343: django-cms==3.4.3
+    cms344: django-cms==3.4.4
+    cms345: django-cms==3.4.5
+    cms346: django-cms==3.4.6
+    cms352: django-cms==3.5.2
     coverage
     django-coverage
     factory_boy
@@ -36,65 +42,10 @@ deps =
     # 0.12.2 introduces something strange!
     django-modeltranslation==0.12.1
 
-[testenv:django18-32]
+[testenv:py27-django20]
+whitelist_externals = echo
 deps =
-    django>=1.8, <1.9
-    django-cms==3.2.0
-    {[base]deps}
+commands= echo "no django 2.0 on python 2.7!"
 
-[testenv:django19-32]
-deps =
-    django>=1.9, <1.10
-    django-cms==3.2.0
-    {[base]deps}
-
-[testenv:django110-33]
-deps =
-    django>=1.10, <1.11
-    django-cms==3.3.0
-    {[base]deps}
-
-[testenv:django111-342]
-deps =
-    django>=1.11, <1.12
-    django-cms==3.4.2
-    {[base]deps}
-
-[testenv:django111-343]
-deps =
-    django>=1.11, <1.12
-    django-cms==3.4.3
-    {[base]deps}
-
-[testenv:django111-344]
-deps =
-    django>=1.11, <1.12
-    django-cms==3.4.4
-    {[base]deps}
-
-[testenv:django111-345]
-deps =
-    django>=1.11, <1.12
-    django-cms==3.4.5
-    {[base]deps}
-
-[testenv:django20-345]
-basepython = python3.6
-deps =
-    django>=2.0, <2.1
-    django-cms==3.4.5
-    {[base]deps}
-
-[testenv:django20-351]
-basepython = python3.6
-deps =
-    django>=2.0, <2.1
-    django-cms==3.5.1
-    {[base]deps}
-
-[testenv:django20-352]
-basepython = python3.6
-deps =
-    django>=2.0, <2.1
-    django-cms==3.5.2
-    {[base]deps}
+[testenv:flake8]
+commands = flake8
