--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 python:
-  - 2.7
-  - 3.4
+#  - 2.7
+#  - 3.4
   - 3.5
-  - 3.6
+#  - 3.6
 
 env:
   - DJANGO="django<1.9" DJANGO_CMS="django-cms==3.4.4"
@@ -17,7 +17,7 @@ env:
   - DJANGO="django<2.1" DJANGO_CMS="django-cms==3.5.2"
 
 install:
-  - pip -U pip
+  - pip install -U pip
   - pip install -r test_requirements.txt
   - pip install -q $DJANGO $DJANGO_CMS
   - python setup.py -q install
