--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ deps =
     django100: Django>=1.10,<1.11
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
     cms342: django-cms==3.4.2
     cms343: django-cms==3.4.3
     cms344: django-cms==3.4.4
@@ -46,6 +47,11 @@ deps =
 whitelist_externals = echo
 deps =
 commands= echo "no django 2.0 on python 2.7!"
+
+[testenv:py27-django21]
+whitelist_externals = echo
+deps =
+commands= echo "no django 2.1 on python 2.7!"
 
 [testenv:flake8]
 commands = flake8
