--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 
 [tox]
 # no django 2.0 yet, as filer and cms dont support it.
-envlist = py{27,36}-django{111}-cms{342,343,344,345,346,352}
+envlist = py{27,36}-django{111}-cms{342,343,344,345,346,352,360,}
 
 [testenv]
 commands = python manage.py test
@@ -29,6 +29,7 @@ deps =
     cms345: django-cms==3.4.5
     cms346: django-cms==3.4.6
     cms352: django-cms==3.5.2
+    cms360: django-cms==3.6.0
     coverage
     django-coverage
     factory_boy
