--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,10 @@
 
 [tox]
 # no django 2.0 yet, as filer and cms dont support it.
-envlist = py{27,36}-django{111}-cms{342,343,344,345,346,352,360,}
+envlist = py{27,36}-django{111}-cms{342,343,344,345,346,352,360}
 
 [testenv]
-commands = python manage.py test
+commands = python manage.py test {posargs}
 setenv =
     DJANGO_SETTINGS_MODULE=djangocms_misc.tests.settings
     PYTHONPATH={toxinidir}
