--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,11 @@
+dist: xenial  # has py35!
+sudo: false
 language: python
-python:
-  - 2.7
-  - 3.4
-  - 3.5
-  - 3.6
-
 cache: pip
-
-env:
-  # - DJANGO="django<1.9" DJANGO_CMS="django-cms==3.4.4"
-  # - DJANGO="django<1.10" DJANGO_CMS="django-cms==3.4.4"
-  - DJANGO="django<1.11" DJANGO_CMS="django-cms==3.4.2"
-  - DJANGO="django<1.11" DJANGO_CMS="django-cms==3.4.3"
-  - DJANGO="django<1.11" DJANGO_CMS="django-cms==3.4.4"
-  - DJANGO="django<1.11" DJANGO_CMS="django-cms==3.4.5"
-  - DJANGO="django<2.0" DJANGO_CMS="django-cms==3.5.2"
-  - DJANGO="django<2.1" DJANGO_CMS="django-cms==3.4.6"
-  - DJANGO="django<2.1" DJANGO_CMS="django-cms==3.5.2"
-  - DJANGO="django<2.2" DJANGO_CMS="django-cms==3.4.6"
-  - DJANGO="django<2.2" DJANGO_CMS="django-cms==3.5.2"
-
-install:
-  - pip install -U pip
-  - pip install -r test_requirements.txt
-  - pip install -q $DJANGO $DJANGO_CMS
-  - python setup.py -q install
-
-script:
-  - ./manage.py test
-
-matrix:
-  allow_failures:
-    - env: DJANGO="django<2.1" DJANGO_CMS="django-cms==3.4.6"
-    - env: DJANGO="django<2.1" DJANGO_CMS="django-cms==3.5.2"
-    - env: DJANGO="django<2.2" DJANGO_CMS="django-cms==3.4.6"
-    - env: DJANGO="django<2.2" DJANGO_CMS="django-cms==3.5.2"
-  exclude:
-    - python: '2.7'
-      env: DJANGO="django<2.1" DJANGO_CMS="django-cms==3.4.5
-    - python: '2.7'
-      env: DJANGO="django<2.1" DJANGO_CMS="django-cms==3.5.2
-    - python: '2.7'
-      env: DJANGO="django<2.2" DJANGO_CMS="django-cms==3.4.5
-    - python: '2.7'
-      env: DJANGO="django<2.2" DJANGO_CMS="django-cms==3.5.2
+python:
+  - "2.7"
+  - "3.5"
+  - "3.6"
+  - "3.7"
+install: pip install tox-travis
+script: tox
