tox, new djangos, new cmssss

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 
 [tox]
 # no django 2.0 yet, as filer and cms dont support it.
-envlist = py{27,35,36,37}-django{111}-cms{342,343,344,345,346,352,360},py{35,36,37}-django{20,21,22,30}-cms{360,370}
+envlist = py{27,35,36,37}-django{111}-cms{342,343,344,345,346,352,360},py{35,36,37}-django{20,21}-cms{360},py{35,36,37}-django{20,21,22,30}-cms{370}
 
 [testenv]
 commands = python manage.py test {posargs}
