--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
 max-line-length=100
-ignore = F999,E501,E128,E124
+extend-ignore = F999,E501,E128,E124
 exclude = .tox,node_modules,build,.git,*/migrations/*,*/static/CACHE/*,*/south_migrations/*
