--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,20 @@
 envlist = py{27,35,36,37}-django{111}-cms{342,343,344,345,346,352,360},py{35,36,37}-django{20,21}-cms{360}
 # todo: autopublisher for cms 3.7! ,py{36,37}-django{20,21,22}-cms{370}
 
+[testenv:py37-django21-cms360-flake8]
+deps = flake8
+commands = flake8
+
+[testenv:py37-django21-cms360-coverage]
+whitelist_externals = echo
+commands =
+    pip install coverage
+    coverage erase
+    coverage run ./manage.py test
+    coverage report --include='djangocms_misc*' --omit='*/tests/*' --omit='*/migrations/*'
+    coverage html --include='djangocms_misc*' --omit='*/tests/*' --omit='*/migrations/*'
+    echo "opener htmlcov/index.html"
+
 [testenv]
 commands = python manage.py test {posargs}
 setenv =
