--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 
 [tox]
 # no django 2.0 yet, as filer and cms dont support it.
-envlist = py{36,37}-django{111}-cms{346,352,36},py{35,36,37}-django{20,21,22}-cms{36,37},py37-django22-cms360-coverage,py37-django22-cms37-flake8
+envlist = py{36,37}-django{22}-cms{37},py37-django22-cms360-coverage,py37-django22-cms37-flake8
 # todo: autopublisher for cms 3.7! ,py{36,37}-django{20,21,22}-cms{370}
 
 [testenv:py37-django22-cms37-flake8]
@@ -32,14 +32,9 @@ setenv =
     DJANGO_SETTINGS_MODULE=djangocms_misc.tests.settings
     PYTHONPATH={toxinidir}
 deps =
-    django111: Django>=1.11,<2.0
-    django20: Django>=2.0,<2.1
-    django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
     django30: Django>=3.0,<3.1
-    cms346: django-cms==3.4.6
-    cms352: django-cms==3.5.2
-    cms36: django-cms==3.6.0
+    django31: Django>=3.1,<3.2
     cms37: django-cms==3.7.0
     coverage
     django-coverage
@@ -48,11 +43,11 @@ deps =
     selenium
     django-appconf
     django-sekizai
-    djangocms-link<2
-    djangocms-text-ckeditor<3
-    django-filer<1.5
-    django-formtools<2.2
+    djangocms-link
+    djangocms-text-ckeditor
+    django-filer
+    # django-formtools<2.2
     django-hvad
     # 0.12.2 introduces something strange!
-    django-modeltranslation==0.12.1
-    django-polymorphic<1.2
+    # django-modeltranslation==0.12.1
+    django-modeltranslation
