--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "es6-promise": "^4.2.4",
     "gulp": "^3.9.0",
     "gulp-jshint": "^2.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.1",
-    "jshint": "^2.8.0",
-    "path": "^0.12.7",
     "gulp-shell": "^0.6.5",
-    "gulp-rename": "^1.2.2"
+    "jshint": "^2.8.0",
+    "path": "^0.12.7"
   }
 }
