--- a/tox.ini
+++ b/tox.ini
@@ -9,14 +9,18 @@
 
 [tox]
 # no django 2.0 yet, as filer and cms dont support it.
-envlist = py{36,37}-django{22}-cms{37},py37-django22-cms360-coverage,py37-django22-cms37-flake8
+envlist =
+    py{36,37}-django{22}-cms{37}-treebeard43
+    py{37}-django{22,32}-cms{39}-treebeard45  # wait for hvad!?
+    py37-django22-cms37-treebeard43-coverage
+
 # todo: autopublisher for cms 3.7! ,py{36,37}-django{20,21,22}-cms{370}
 
-[testenv:py37-django22-cms37-flake8]
+[testenv:flake8]
 deps = flake8
 commands = flake8
 
-[testenv:py37-django22-cms37-coverage]
+[testenv:py37-django22-cms37-treebeard43-coverage]
 whitelist_externals = echo
 commands =
     pip install coverage
@@ -33,9 +37,12 @@ setenv =
     PYTHONPATH={toxinidir}
 deps =
     django22: Django>=2.2,<2.3
-    django30: Django>=3.0,<3.1
-    django31: Django>=3.1,<3.2
+    django32: Django>=3.2,<3.3
+    cms34: django-cms==3.4.6
     cms37: django-cms==3.7.0
+    cms39: django-cms==3.9.0rc2
+    treebeard43: django-treebeard==4.3.0
+    treebeard45: django-treebeard==4.5.1
     coverage
     django-coverage
     factory_boy
@@ -47,7 +54,7 @@ deps =
     djangocms-text-ckeditor
     django-filer
     # django-formtools<2.2
-    django-hvad
+    # django-hvad
     # 0.12.2 introduces something strange!
     # django-modeltranslation==0.12.1
     django-modeltranslation
