--- a/tox.ini
+++ b/tox.ini
@@ -11,10 +11,14 @@
 # no django 2.0 yet, as filer and cms dont support it.
 envlist =
     py{36,37}-django{22}-cms{37}-treebeard43
-    py{37}-django{22,32}-cms{39}-treebeard45  # wait for hvad!?
+    py{37,38}-django{22,32}-cms{39}-treebeard45  # wait for hvad!?
     py37-django22-cms37-treebeard43-coverage
 
-# todo: autopublisher for cms 3.7! ,py{36,37}-django{20,21,22}-cms{370}
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
 
 [testenv:flake8]
 deps = flake8
