--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ python =
 [testenv:flake8]
 deps = flake8
 commands = flake8
+skip_install = true
 
 [testenv:py37-django22-cms37-treebeard43-coverage]
 whitelist_externals = echo
