--- a/tox.ini
+++ b/tox.ini
@@ -8,17 +8,18 @@
 # cp geckodriver /usr/local/bin/
 
 [tox]
-# no django 2.0 yet, as filer and cms dont support it.
 envlist =
-    py{36,37}-django{22}-cms{37}-treebeard43
-    py{37,38}-django{22,32}-cms{39}-treebeard45  # wait for hvad!?
-    py37-django22-cms37-treebeard43-coverage
+    py{36,37}-django{22}-cms{37}-treebeard{43}
+    py{37,38}-django{22,32}-cms{39}-treebeard{45}  # wait for hvad!?
+    py37-django22-cms37-treebeard{43}-coverage
+    flake8
 
 [gh-actions]
 python =
     3.6: py36
     3.7: py37
     3.8: py38
+    3.9: py39
 
 [testenv:flake8]
 deps = flake8
