--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include LICENSE
 include README.md
-include PYPI.rst
+include PYPI.md
 global-exclude *.orig *.pyc *.log *.swp
 
 recursive-include djangocms_misc/basic *
