--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands = flake8
 skip_install = true
 
 [testenv:py37-django22-cms37-treebeard43-coverage]
-whitelist_externals = echo
+allowlist_externals = echo
 commands =
     pip install coverage
     coverage erase
