--- a/tox.ini
+++ b/tox.ini
@@ -9,24 +9,27 @@
 
 [tox]
 envlist =
-    py{37}-django{22}-cms{37}-treebeard{43}
-    py{37,38,39}-django{22,32}-cms{39}-treebeard{45}  # wait for hvad!?
-    py{37,38,39}-django{32}-cms{310}-treebeard{45}  # wait for hvad!?
-    py37-django22-cms37-treebeard{43}-coverage
+    py{39}-django{22}-cms{37}-treebeard{43}
+    py{39}-django{22,32}-cms{39}-treebeard{45}  # wait for hvad!?
+    py{39}-django{32}-cms{310}-treebeard{45}  # wait for hvad!?
+    py{39,310,311}-django{42}-cms{310}-treebeard{45}  # wait for hvad!?
+    py{39,310,311,312}-django{42}-cms{311}-treebeard{45}  # wait for hvad!?
+    py312-django42-cms311-treebeard45-coverage
     flake8
 
 [gh-actions]
 python =
-    3.7: py37
-    3.8: py38
     3.9: py39
+    3.10: py310
+    3.11: py311
+    3.12: py312
 
 [testenv:flake8]
 deps = flake8
 commands = flake8
 skip_install = true
 
-[testenv:py37-django22-cms37-treebeard43-coverage]
+[testenv:py312-django42-cms311-treebeard45-coverage]
 allowlist_externals = echo
 commands =
     pip install coverage
