--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     # if: github.repository == 'bnzk/djangocms-misc'
     strategy:
       matrix:
-        python: [3.7, 3.8, 3.9]
+        python: [3.9, "3.10", "3.11", "3.12"]
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python ${{ matrix.python }}
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.7]
+        python: ["3.12"]
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python ${{ matrix.python }}
@@ -38,20 +38,20 @@ jobs:
       - name: Run tox with coverage
         # Run tox using the version of Python in `PATH`
         # run: tox -e py${{ matrix.python }}-${{ matrix.django }}
-        run: tox -e py37-django22-cms37-treebeard43-coverage
+        run: tox -e py312-django42-cms311-treebeard45-coverage
 
   lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.7]
+        python: ["3.12"]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Setup Python ${{ matrix.python }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python }}
-      - name: Install flake8
-        run: pip install flake8
-      - name: Run flake8
-        run: flake8
+      - name: Install pre-commit
+        run: pip install pre-commit
+      - name: Run pre-commit
+        run: pre-commit run --all-files
