new CI on the way

--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,8 @@ commands =
     echo "opener htmlcov/index.html"
 
 [testenv]
-commands = python manage.py test {posargs}
+commands =
+    python manage.py test {posargs}
 setenv =
     DJANGO_SETTINGS_MODULE=djangocms_misc.tests.settings
     PYTHONPATH={toxinidir}
@@ -51,16 +52,18 @@ deps =
     cms37: django-cms==3.7.3
     cms39: django-cms==3.9.0
     cms310: django-cms==3.10.0
+    cms311: django-cms==3.11.0
     treebeard43: django-treebeard==4.3.0
     treebeard45: django-treebeard==4.5.1
     coverage
+    django-mptt
     django-coverage
     factory_boy
     mock
     selenium
     django-appconf
     django-sekizai
-    djangocms-link
+    djangocms-link<5
     djangocms-text-ckeditor
     django-filer
     # django-formtools<2.2
