--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,8 @@ envlist =
     py{39}-django{22,32}-cms{39}-treebeard{45}  # wait for hvad!?
     py{39}-django{32}-cms{310}-treebeard{45}  # wait for hvad!?
     py{39,310,311}-django{42}-cms{310}-treebeard{45}  # wait for hvad!?
-    py{39,310,311,312}-django{42}-cms{311}-treebeard{45}  # wait for hvad!?
-    py312-django42-cms311-treebeard45-coverage
+    # py{39,310,311,312}-django{42}-cms{311}-treebeard{45}  # wait for hvad!?
+    py311-django42-cms311-treebeard45-coverage
     flake8
 
 [gh-actions]
@@ -22,14 +22,14 @@ python =
     3.9: py39
     3.10: py310
     3.11: py311
-    3.12: py312
+    # 3.12: py312
 
 [testenv:flake8]
 deps = flake8
 commands = flake8
 skip_install = true
 
-[testenv:py312-django42-cms311-treebeard45-coverage]
+[testenv:py311-django42-cms311-treebeard45-coverage]
 allowlist_externals = echo
 commands =
     pip install coverage
@@ -52,7 +52,7 @@ deps =
     cms37: django-cms==3.7.3
     cms39: django-cms==3.9.0
     cms310: django-cms==3.10.0
-    cms311: django-cms==3.11.0
+    cms311: django-cms==3.11.10
     treebeard43: django-treebeard==4.3.0
     treebeard45: django-treebeard==4.5.1
     coverage
