--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     # if: github.repository == 'bnzk/djangocms-misc'
     strategy:
       matrix:
-        python: [3.9, "3.10", "3.11", "3.12"]
+        python: [3.9, "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python ${{ matrix.python }}
